#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_pds2psana
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-09-20
2015-4-9 David Schneider
- fix shared pointer cycle causing exhaustion of system file handles for small data JIRA PSAS-130
- set path for large file more carefully, other minor cleanup
	
Tag: V00-09-19
2015-3-5 David Schneider
- small data JIRA issue PSAS-85
  uncompress small data proxy payload if need be
  cache pointer from big event for efficiency
  have largeObjectProxy protect itself from destruction by incrementing shared pointer ref count to self
- add some const corretness to XtcConverter

Tag: V00-09-18
2015-3-3 David Schneider
- small data JIRA issue PSAS-85
- make XtcConverter splitTypes public so that smallDataProxy can check for this
- add class SmallDataProxy to handle all proxied items in a datagram

Tag: V00-09-17
2015-2-23 David Schneider
- update to pdsdata 8.2.4 with EvrDataV4 and present function
	
Tag: V00-09-16
2015-2-4 David Schneider
- update psddlc wrapper, JIRA PSAS-103
	
Tag: V00-09-15
2015-2-2 David Schneider
- regenerate for new pdsdata 8.2.2 with EBeamV7 fix. Also OceanOptics DataV3 and 
  test bits on Quartz configV2 and smlData.
- track JIRA PSAS-103.

Tag: V00-09-14
2014-11-25 David Schneider
- regenerate for new pdsdata 8.1.10/psddldata V01-00-22 with TimeTool::ConfigV2, 
  TimeTool::DataV2, Quartz::ConfigV2
- Track JIRA issue PSAS-72

Tag: V00-09-13
2014-10-23 David Schneider
- regenerate for new pdsdata 8.1.8/psddldata V01-00-19 with Epix::Config100aV1 and Epix::ElementV2
  Track JIRA issue PSAS-56

Tag: V00-09-12
2014-10-15 David Schneider
- regenerate for new pdsdata 8.1.7/psddldata V01-00-18 with Bld::BldDataSpectrometerV1